--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.13.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "firebase": "^10.11.1",
     "iron-session": "^8.0.1",
     "next": "14.2.3",
     "react": "^18",
