--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -28,6 +29,7 @@
     "postcss": "^8",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-3d": "^1.0.6",
     "typescript": "^5"
   }
 }
