--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "zod": "^3.23.4"
   },
   "devDependencies": {
